[aliases]
release = sdist bdist_wheel
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = flaskvectortiles
url = https://github.com/mblackgeo/flask-vector-tiles.git
description = A simple Flask/LeafletJS webapp to view vector tiles from PostGIS with pg_tileserv
long_description = file: README.md
long_description_content_type = text/markdown
author = Martin Black
author_email = mblack@sparkgeo.com
zip_safe = False

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
install_requires =
    bjoern~=3.1.0
    flask~=2.0.2
tests_require =
    pytest

[flake8]
max-line-length = 120
max-complexity = 10